Use Equinox framework as module